shared/newton_dynamics/newton.odin


NewtonMeshVertexFormat :: struct {
    m_faceCount : i32,
    m_faceIndexCount : ^i32,
    m_faceMaterial : ^i32,
    m_vertex : NewtonMeshDoubleData,
    m_normal : NewtonMeshFloatData,
    m_binormal : NewtonMeshFloatData,
    m_uv0 : NewtonMeshFloatData,
    m_uv1 : NewtonMeshFloatData,
    m_vertexColor : NewtonMeshFloatData,
}

NewtonMaterialData :: struct #raw_union {
    m_ptr : rawptr,
    m_int : i64,
    m_float : dFloat,
}

@(default_calling_convention="c")
foreign newton {

    @(link_name="NewtonWorldGetVersion")
    NewtonWorldGetVersion :: proc() -> i32 ---

    @(link_name="NewtonWorldFloatSize")
    NewtonWorldFloatSize :: proc() -> i32 ---

    @(link_name="NewtonGetMemoryUsed")
    NewtonGetMemoryUsed :: proc() -> i32 ---

    @(link_name="NewtonSetMemorySystem")
    NewtonSetMemorySystem :: proc(malloc : NewtonAllocMemory, free : NewtonFreeMemory) ---

    @(link_name="NewtonCreate")
    NewtonCreate :: proc() -> ^NewtonWorld ---

    @(link_name="NewtonDestroy")
    NewtonDestroy :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonDestroyAllBodies")
    NewtonDestroyAllBodies :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonGetPostUpdateCallback")
    NewtonGetPostUpdateCallback :: proc(newtonWorld : ^NewtonWorld) -> NewtonPostUpdateCallback ---

    @(link_name="NewtonSetPostUpdateCallback")
    NewtonSetPostUpdateCallback :: proc(newtonWorld : ^NewtonWorld, callback : NewtonPostUpdateCallback) ---

    @(link_name="NewtonAlloc")
    NewtonAlloc :: proc(sizeInBytes : i32) -> rawptr ---

    @(link_name="NewtonFree")
    NewtonFree :: proc(ptr : rawptr) ---

    @(link_name="NewtonLoadPlugins")
    NewtonLoadPlugins :: proc(newtonWorld : ^NewtonWorld, plugInPath : cstring) ---

    @(link_name="NewtonUnloadPlugins")
    NewtonUnloadPlugins :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonCurrentPlugin")
    NewtonCurrentPlugin :: proc(newtonWorld : ^NewtonWorld) -> rawptr ---

    @(link_name="NewtonGetFirstPlugin")
    NewtonGetFirstPlugin :: proc(newtonWorld : ^NewtonWorld) -> rawptr ---

    @(link_name="NewtonGetPreferedPlugin")
    NewtonGetPreferedPlugin :: proc(newtonWorld : ^NewtonWorld) -> rawptr ---

    @(link_name="NewtonGetNextPlugin")
    NewtonGetNextPlugin :: proc(newtonWorld : ^NewtonWorld, plugin : rawptr) -> rawptr ---

    @(link_name="NewtonGetPluginString")
    NewtonGetPluginString :: proc(newtonWorld : ^NewtonWorld, plugin : rawptr) -> cstring ---

    @(link_name="NewtonSelectPlugin")
    NewtonSelectPlugin :: proc(newtonWorld : ^NewtonWorld, plugin : rawptr) ---

    @(link_name="NewtonGetContactMergeTolerance")
    NewtonGetContactMergeTolerance :: proc(newtonWorld : ^NewtonWorld) -> dFloat ---

    @(link_name="NewtonSetContactMergeTolerance")
    NewtonSetContactMergeTolerance :: proc(newtonWorld : ^NewtonWorld, tolerance : dFloat) ---

    @(link_name="NewtonInvalidateCache")
    NewtonInvalidateCache :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonSetSolverIterations")
    NewtonSetSolverIterations :: proc(newtonWorld : ^NewtonWorld, model : i32) ---

    @(link_name="NewtonGetSolverIterations")
    NewtonGetSolverIterations :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonSetParallelSolverOnLargeIsland")
    NewtonSetParallelSolverOnLargeIsland :: proc(newtonWorld : ^NewtonWorld, mode : i32) ---

    @(link_name="NewtonGetParallelSolverOnLargeIsland")
    NewtonGetParallelSolverOnLargeIsland :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonGetBroadphaseAlgorithm")
    NewtonGetBroadphaseAlgorithm :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonSelectBroadphaseAlgorithm")
    NewtonSelectBroadphaseAlgorithm :: proc(newtonWorld : ^NewtonWorld, algorithmType : i32) ---

    @(link_name="NewtonResetBroadphase")
    NewtonResetBroadphase :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonUpdate")
    NewtonUpdate :: proc(newtonWorld : ^NewtonWorld, timestep : dFloat) ---

    @(link_name="NewtonUpdateAsync")
    NewtonUpdateAsync :: proc(newtonWorld : ^NewtonWorld, timestep : dFloat) ---

    @(link_name="NewtonWaitForUpdateToFinish")
    NewtonWaitForUpdateToFinish :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonGetNumberOfSubsteps")
    NewtonGetNumberOfSubsteps :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonSetNumberOfSubsteps")
    NewtonSetNumberOfSubsteps :: proc(newtonWorld : ^NewtonWorld, subSteps : i32) ---

    @(link_name="NewtonGetLastUpdateTime")
    NewtonGetLastUpdateTime :: proc(newtonWorld : ^NewtonWorld) -> dFloat ---

    @(link_name="NewtonSerializeToFile")
    NewtonSerializeToFile :: proc(newtonWorld : ^NewtonWorld, filename : cstring, bodyCallback : NewtonOnBodySerializationCallback, bodyUserData : rawptr) ---

    @(link_name="NewtonDeserializeFromFile")
    NewtonDeserializeFromFile :: proc(newtonWorld : ^NewtonWorld, filename : cstring, bodyCallback : NewtonOnBodyDeserializationCallback, bodyUserData : rawptr) ---

    @(link_name="NewtonSerializeScene")
    NewtonSerializeScene :: proc(newtonWorld : ^NewtonWorld, bodyCallback : NewtonOnBodySerializationCallback, bodyUserData : rawptr, serializeCallback : NewtonSerializeCallback, serializeHandle : rawptr) ---

    @(link_name="NewtonDeserializeScene")
    NewtonDeserializeScene :: proc(newtonWorld : ^NewtonWorld, bodyCallback : NewtonOnBodyDeserializationCallback, bodyUserData : rawptr, serializeCallback : NewtonDeserializeCallback, serializeHandle : rawptr) ---

    @(link_name="NewtonFindSerializedBody")
    NewtonFindSerializedBody :: proc(newtonWorld : ^NewtonWorld, bodySerializedID : i32) -> ^NewtonBody ---

    @(link_name="NewtonSetJointSerializationCallbacks")
    NewtonSetJointSerializationCallbacks :: proc(newtonWorld : ^NewtonWorld, serializeJoint : NewtonOnJointSerializationCallback, deserializeJoint : NewtonOnJointDeserializationCallback) ---

    @(link_name="NewtonGetJointSerializationCallbacks")
    NewtonGetJointSerializationCallbacks :: proc(newtonWorld : ^NewtonWorld, serializeJoint : ^NewtonOnJointSerializationCallback, deserializeJoint : ^NewtonOnJointDeserializationCallback) ---

    @(link_name="NewtonWorldCriticalSectionLock")
    NewtonWorldCriticalSectionLock :: proc(newtonWorld : ^NewtonWorld, threadIndex : i32) ---

    @(link_name="NewtonWorldCriticalSectionUnlock")
    NewtonWorldCriticalSectionUnlock :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonSetThreadsCount")
    NewtonSetThreadsCount :: proc(newtonWorld : ^NewtonWorld, threads : i32) ---

    @(link_name="NewtonGetThreadsCount")
    NewtonGetThreadsCount :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonGetMaxThreadsCount")
    NewtonGetMaxThreadsCount :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonDispachThreadJob")
    NewtonDispachThreadJob :: proc(newtonWorld : ^NewtonWorld, task : NewtonJobTask, usedData : rawptr, functionName : cstring) ---

    @(link_name="NewtonSyncThreadJobs")
    NewtonSyncThreadJobs :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonAtomicAdd")
    NewtonAtomicAdd :: proc(ptr : ^i32, value : i32) -> i32 ---

    @(link_name="NewtonAtomicSwap")
    NewtonAtomicSwap :: proc(ptr : ^i32, value : i32) -> i32 ---

    @(link_name="NewtonYield")
    NewtonYield :: proc() ---

    @(link_name="NewtonSetIslandUpdateEvent")
    NewtonSetIslandUpdateEvent :: proc(newtonWorld : ^NewtonWorld, islandUpdate : NewtonIslandUpdate) ---

    @(link_name="NewtonWorldForEachJointDo")
    NewtonWorldForEachJointDo :: proc(newtonWorld : ^NewtonWorld, callback : NewtonJointIterator, userData : rawptr) ---

    @(link_name="NewtonWorldForEachBodyInAABBDo")
    NewtonWorldForEachBodyInAABBDo :: proc(newtonWorld : ^NewtonWorld, p0 : ^dFloat, p1 : ^dFloat, callback : NewtonBodyIterator, userData : rawptr) ---

    @(link_name="NewtonWorldSetUserData")
    NewtonWorldSetUserData :: proc(newtonWorld : ^NewtonWorld, userData : rawptr) ---

    @(link_name="NewtonWorldGetUserData")
    NewtonWorldGetUserData :: proc(newtonWorld : ^NewtonWorld) -> rawptr ---

    @(link_name="NewtonWorldAddListener")
    NewtonWorldAddListener :: proc(newtonWorld : ^NewtonWorld, nameId : cstring, listenerUserData : rawptr) -> rawptr ---

    @(link_name="NewtonWorldGetListener")
    NewtonWorldGetListener :: proc(newtonWorld : ^NewtonWorld, nameId : cstring) -> rawptr ---

    @(link_name="NewtonWorldListenerSetDebugCallback")
    NewtonWorldListenerSetDebugCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldListenerDebugCallback) ---

    @(link_name="NewtonWorldListenerSetPostStepCallback")
    NewtonWorldListenerSetPostStepCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldUpdateListenerCallback) ---

    @(link_name="NewtonWorldListenerSetPreUpdateCallback")
    NewtonWorldListenerSetPreUpdateCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldUpdateListenerCallback) ---

    @(link_name="NewtonWorldListenerSetPostUpdateCallback")
    NewtonWorldListenerSetPostUpdateCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldUpdateListenerCallback) ---

    @(link_name="NewtonWorldListenerSetDestructorCallback")
    NewtonWorldListenerSetDestructorCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldDestroyListenerCallback) ---

    @(link_name="NewtonWorldListenerSetBodyDestroyCallback")
    NewtonWorldListenerSetBodyDestroyCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr, callback : NewtonWorldListenerBodyDestroyCallback) ---

    @(link_name="NewtonWorldListenerDebug")
    NewtonWorldListenerDebug :: proc(newtonWorld : ^NewtonWorld, _context : rawptr) ---

    @(link_name="NewtonWorldGetListenerUserData")
    NewtonWorldGetListenerUserData :: proc(newtonWorld : ^NewtonWorld, listener : rawptr) -> rawptr ---

    @(link_name="NewtonWorldListenerGetBodyDestroyCallback")
    NewtonWorldListenerGetBodyDestroyCallback :: proc(newtonWorld : ^NewtonWorld, listener : rawptr) -> NewtonWorldListenerBodyDestroyCallback ---

    @(link_name="NewtonWorldSetDestructorCallback")
    NewtonWorldSetDestructorCallback :: proc(newtonWorld : ^NewtonWorld, destructor : NewtonWorldDestructorCallback) ---

    @(link_name="NewtonWorldGetDestructorCallback")
    NewtonWorldGetDestructorCallback :: proc(newtonWorld : ^NewtonWorld) -> NewtonWorldDestructorCallback ---

    @(link_name="NewtonWorldSetCollisionConstructorDestructorCallback")
    NewtonWorldSetCollisionConstructorDestructorCallback :: proc(newtonWorld : ^NewtonWorld, constructor : NewtonCollisionCopyConstructionCallback, destructor : NewtonCollisionDestructorCallback) ---

    @(link_name="NewtonWorldSetCreateDestroyContactCallback")
    NewtonWorldSetCreateDestroyContactCallback :: proc(newtonWorld : ^NewtonWorld, createContact : NewtonCreateContactCallback, destroyContact : NewtonDestroyContactCallback) ---

    @(link_name="NewtonWorldRayCast")
    NewtonWorldRayCast :: proc(newtonWorld : ^NewtonWorld, p0 : ^dFloat, p1 : ^dFloat, filter : NewtonWorldRayFilterCallback, userData : rawptr, prefilter : NewtonWorldRayPrefilterCallback, threadIndex : i32) ---

    @(link_name="NewtonWorldConvexCast")
    NewtonWorldConvexCast :: proc(newtonWorld : ^NewtonWorld, matrix4x4 : ^dFloat, target : ^dFloat, shape : ^NewtonCollision, param : ^dFloat, userData : rawptr, prefilter : NewtonWorldRayPrefilterCallback, info : ^NewtonWorldConvexCastReturnInfo, maxContactsCount : i32, threadIndex : i32) -> i32 ---

    @(link_name="NewtonWorldCollide")
    NewtonWorldCollide :: proc(newtonWorld : ^NewtonWorld, matrix4x4 : ^dFloat, shape : ^NewtonCollision, userData : rawptr, prefilter : NewtonWorldRayPrefilterCallback, info : ^NewtonWorldConvexCastReturnInfo, maxContactsCount : i32, threadIndex : i32) -> i32 ---
